--- a/src/style/home.css
+++ b/src/style/home.css
@@ -1,12 +1,22 @@
+
 main{
+    background-image: url("../asserts/back.avif");
+}
+.first{
+    height: 70dvh;
     display: flex;
-    justify-content: space-between;
-    padding: 0px 20px;
-    
+    align-items: center;
+    justify-content: center;
+}
+.first input{
+    height: 50px;
+    width: 50%;
+    border-radius: 50px;
 }
 .home{
     margin-top: 10px;
-    
+    background-color: aliceblue;
+    border-radius: 20px;
 }
 .home h1{
     font-size: 2.5rem;
