--- a/src/style/nav.css
+++ b/src/style/nav.css
@@ -4,8 +4,8 @@ nav{
     align-items: center;
     position: fixed;
     width: 100dvw;
-    padding: 5px;
     background-color: rgba(255, 255, 255, 0.089);
+    backdrop-filter: blur( 2px );
 }
 nav img{
     width: 60px;
@@ -14,7 +14,7 @@ nav img{
 .log{
     padding: 10px;
     border: none;
-    color:rgb(0, 0, 0);
+    color:white;
     font-weight: bold;
     cursor: pointer;
 }
