--- a/src/style/home.css
+++ b/src/style/home.css
@@ -34,6 +34,8 @@ main{
     height: 50px;
     width: 50%;
     border-radius: 50px;
+    font-size: 1.5rem;
+    margin-left: 5px;
 }
 .home{
     margin-top: 10px;
