--- a/src/style/nav.css
+++ b/src/style/nav.css
@@ -1,6 +1,6 @@
 nav{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     position: fixed;
     width: 100%;
@@ -14,7 +14,7 @@ nav img{
     height: 60px;
 }
 .log{
-    padding: 10px;
+    margin: 10px;
     border: none;
     font-weight: bold;
     cursor: pointer;
