--- a/src/style/admin.css
+++ b/src/style/admin.css
@@ -10,6 +10,14 @@
     flex-wrap: wrap;
     margin-left: 20px;
 }
+.menuimg{
+    width: 100%;
+    max-height: 500px;
+    max-width: 250px;
+    background-size: cover;
+    background-position: center;
+    border-radius: 20px;
+}
 .add label{
     display: flex;
     flex-direction: row;
