--- a/src/style/admin.css
+++ b/src/style/admin.css
@@ -11,10 +11,9 @@
     margin-left: 20px;
 }
 .menuimg{
-    width: 100%;
-    max-height: 500px;
-    max-width: 250px;
-    background-size: cover;
+    height: 200px;
+    width: 250px;
+    background-size: contain;
     background-position: center;
     border-radius: 20px;
 }
