--- a/src/style/home.css
+++ b/src/style/home.css
@@ -1,253 +1,247 @@
-
-main{
-    background-image: url("../asserts/back.avif");
-    background-size: auto;
-    background-repeat: no-repeat;
-    height: fit-content;
+main {
+  background-image: url("../asserts/back.avif");
+  background-size: auto;
+  background-repeat: no-repeat;
+  height: fit-content;
 }
-.first{
-    height: 80dvh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    color: white;
+.first {
+  height: 70dvh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
 }
-.herotext{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    margin-bottom: 20px;
+.herotext {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  margin-bottom: 20px;
 }
-.first h1{
-    font-size: 3.5rem;
-    margin: 10px;
+.first h1 {
+  font-size: 3.5rem;
+  margin: 10px;
 }
-.first p{
-    font-size: 2rem;
-    margin: 10px;
-
+.first p {
+  font-size: 2rem;
+  margin: 10px;
 }
-.first input{
-    height: 50px;
-    width: 50%;
-    border-radius: 50px;
-    font-size: 1.5rem;
-    margin-left: 5px;
-    border: none;
+.first input {
+  height: 50px;
+  width: 50%;
+  border-radius: 50px;
+  font-size: 1.5rem;
+  margin-left: 5px;
+  border: none;
 }
-.home{
-    margin-top: 10px;
-    background-color: aliceblue;
-    border-radius: 20px;
-    display: flex;
-
+.home {
+  margin-top: 10px;
+  background-color: aliceblue;
+  border-radius: 20px;
+  display: flex;
 }
-.collection{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    width: 70dvw;
+.collection {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  width: 70dvw;
 }
-.collection h2{
-    font-size: 2.5rem;
-    width: fit-content;
+.collection h2 {
+  font-size: 2.5rem;
+  width: fit-content;
 }
-.menu{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    list-style-type: none;
-    margin: 10px;
-    padding: 0;
+.menu {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  list-style-type: none;
+  margin: 10px;
+  padding: 0;
 }
-aside{
-    width: 25dvw;
-    height: auto;
+aside {
+  width: 25dvw;
+  height: auto;
 }
-aside h2{
-    font-size: 2.5rem;
-    margin: 33.2px;
+aside h2 {
+  font-size: 2.5rem;
+  margin: 33.2px;
 }
-form h3{
-    margin-bottom: 5px;
+form h3 {
+  margin-bottom: 5px;
 }
-form input{
-    background-color: aqua;
-    border: none;
-    border-radius: 20px;
-    font-weight: bold;
-    font-size: 1rem;
-    padding: 10px 15px;
-    margin-left: 20px;
+form input {
+  background-color: aqua;
+  border: none;
+  border-radius: 20px;
+  font-weight: bold;
+  font-size: 1rem;
+  padding: 10px 15px;
+  margin-left: 20px;
 }
-.food{
-    width: 250px;
-    background-color: rgb(206, 230, 252);
-    margin: 10px;
-    /* border: 1px solid rgb(39, 39, 39); */
-    border-radius: 20px;
-    padding: 15px;
+.food {
+  width: 250px;
+  background-color: rgb(206, 230, 252);
+  margin: 10px;
+  /* border: 1px solid rgb(39, 39, 39); */
+  border-radius: 20px;
+  padding: 15px;
 }
-.food button{
-    background-color: rgb(76, 76, 240);
-    border-radius: 20px;
-    color: white;
-    border: none;
-    padding: 10px;
-    width: 100%;
-    font-weight: bold;
-    font-size: 1rem;
-    cursor: pointer;
-
+.food button {
+  background-color: rgb(76, 76, 240);
+  border-radius: 20px;
+  color: white;
+  border: none;
+  padding: 10px;
+  width: 100%;
+  font-weight: bold;
+  font-size: 1rem;
+  cursor: pointer;
 }
 
-.sub{
-    border-radius: 20px;
-    border: none;
-    padding: 10px;
-    width: 50%;
-    font-weight: bold;
-    font-size: 1rem;
-    cursor: pointer;
-    margin: 10px;
-    border: 2px solid;
+.sub {
+  border-radius: 20px;
+  border: none;
+  padding: 10px;
+  width: 50%;
+  font-weight: bold;
+  font-size: 1rem;
+  cursor: pointer;
+  margin: 10px;
+  border: 2px solid;
 }
-.sub:nth-child(2){
-    background-color: rgb(76, 76, 240);
-    color: white;
+.sub:nth-child(2) {
+  background-color: rgb(76, 76, 240);
+  color: white;
 }
-.sub:hover{
-    color: white;
-    background-color: rgb(100, 100, 255);
-    transition: background-color 0.5s ease-in-out;
+.sub:hover {
+  color: white;
+  background-color: rgb(100, 100, 255);
+  transition: background-color 0.5s ease-in-out;
 }
-.obut{
-    display: flex;
-    flex-direction: row;
-
+.obut {
+  display: flex;
+  flex-direction: row;
 }
 table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    margin: 10px;
-    width: 100%;
-  }
-  
-  td, th {
-    border: 1px solid #8d8d8d;
-    text-align: left;
-    padding: 8px;
-    width: 100%;
-  }
-  
-  tr:nth-child(even) {
-    background-color: #dddddd;
-  }
-  .feedback{
-    margin-top: 20px;
-    width: 100%;
-    text-align: center;
-    padding: 20px;
-    font-size: 1.5rem;
-  }
-  .feedback form{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    }
-   .feedback form input{
-    margin: 10px;
-    }
-   .feedback form button{
-    margin: 10px;
-  }
-  .form{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-}
-.form h2{
-    font-size: 2.5rem;
-    text-decoration: underline;
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  margin: 10px;
+  width: 100%;
 }
 
-.form-group{
-    display: flex;
-    flex-direction: column;
-    margin: 10px;
-    width: fit-content;
+td,
+th {
+  border: 1px solid #8d8d8d;
+  text-align: left;
+  padding: 8px;
+  width: 100%;
 }
-.input2{
-    
-    padding: 10px;
-    border: none;
-    border-radius: 20px;
-    height: 30px;
-    background-color: aqua;
-    margin: 10px;
-    font-size: 16px;
+
+tr:nth-child(even) {
+  background-color: #dddddd;
 }
-.input{
-    
-    padding: 10px;
-    border: none;
-    border-radius: 20px;
-    height: 30px;
-    background-color: aqua;
-    margin: 10px;
-    font-size: 16px;
+.feedback {
+  margin-top: 20px;
+  width: 100%;
+  text-align: center;
+  padding: 20px;
+  font-size: 1.5rem;
 }
-.message{
-    padding: 10px;
-    border: none;
-    border-radius: 20px;
-    height: 20dvh;
-    background-color: aqua;
-    margin: 10px;
-    font-size: 16px;
-    resize: none;
+.feedback form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
-.form-group button{
-    width: 100%;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 20px;
-    background-color: rgb(88, 64, 224);
-    color: white;
-    cursor: pointer;
+.feedback form input {
+  margin: 10px;
+}
+.feedback form button {
+  margin: 10px;
+}
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  background-color: aliceblue;
+}
+.form h2 {
+  font-size: 2.5rem;
+  text-decoration: underline;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+  width: fit-content;
+}
+.input2 {
+  padding: 10px;
+  border: none;
+  border-radius: 20px;
+  height: 30px;
+  background-color: aqua;
+  margin: 10px;
+  font-size: 16px;
+}
+.input {
+  padding: 10px;
+  border: none;
+  border-radius: 20px;
+  height: 30px;
+  background-color: aqua;
+  margin: 10px;
+  font-size: 16px;
+}
+.message {
+  padding: 10px;
+  border: none;
+  border-radius: 20px;
+  height: 20dvh;
+  background-color: aqua;
+  margin: 10px;
+  font-size: 16px;
+  resize: none;
+}
+.form-group button {
+  width: 100%;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 20px;
+  background-color: rgb(88, 64, 224);
+  color: white;
+  cursor: pointer;
 }
 @media only screen and (max-width: 1024px) {
-    .input2{
-        width: -webkit-fill-available
-    }
+  .input2 {
+    width: -webkit-fill-available;
+  }
 }
 @media only screen and (max-width: 768px) {
-    
-    .home{
-        flex-direction: column;
-    }
-    .collection{
-        width: 100%;
-    }
-    aside{
-        width: 100%;
-    }
-    table{
-        width: 90%;
-    }
-    .first h1{
-        font-size: 2rem;
-    }
-    .first p{
-        font-size: 1.5rem;
-    }
-    .first input{
-        display: none;
-    }
+  .home {
+    flex-direction: column;
+  }
+  .collection {
+    width: 100%;
+  }
+  aside {
+    width: 100%;
+  }
+  table {
+    width: 90%;
+  }
+  .first h1 {
+    font-size: 2rem;
+  }
+  .first p {
+    font-size: 1.5rem;
+  }
+  .first input {
+    display: none;
+  }
 }
