--- a/src/style/admin.css
+++ b/src/style/admin.css
@@ -1,3 +1,12 @@
+.start{
+    color: antiquewhite;
+    background-color: brown;
+}
+.greet{
+    height: 40dvh;
+    display: flex;
+    align-items: flex-end;
+}
 .greet h2{
     margin: 20px;
     font-size: 2.5rem;
