--- a/src/asserts/style/nav.css
+++ b/src/asserts/style/nav.css
@@ -7,16 +7,19 @@ nav{
     background-color: rgba(255, 255, 255, 0.089);
     backdrop-filter: blur( 2px );
     color:white;
-    padding: 0px 10px 0px 10px;
+    padding: 20px;
 }
 nav img{
     width: 60px;
     height: 60px;
 }
 .log{
+
     margin: 10px;
     border: none;
     font-weight: bold;
     cursor: pointer;
+    color: white;
+    text-decoration: none;
     
 }
