--- a/src/asserts/style/admin.css
+++ b/src/asserts/style/admin.css
@@ -7,6 +7,14 @@
     display: flex;
     align-items: flex-end;
 }
+.home5 {
+    margin-top: 10px;
+    background-color: aliceblue;
+    border-radius: 20px;
+    display: flex;
+    color: black;
+  }
+
 .greet h2{
     margin: 20px;
     font-size: 2.5rem;
@@ -49,4 +57,7 @@
     font-weight: bold;
     font-size: 1rem;
     cursor: pointer;
+}
+.add *{
+    margin: 5px;
 }
