--- a/src/asserts/style/home.css
+++ b/src/asserts/style/home.css
@@ -1,5 +1,5 @@
 main {
-  background-image: url("../asserts/back.avif");
+  background-image: url("../back.avif");
   background-size: auto;
   background-repeat: no-repeat;
   height: fit-content;
@@ -42,11 +42,11 @@ main {
   border-radius: 20px;
   display: flex;
   color: black;
-  flex-direction: column;
-  flex-wrap: wrap;
+
 }
 .collection {
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
@@ -63,16 +63,51 @@ main {
   margin: 10px;
   padding: 0;
 }
-aside {
-  height: auto;
+.menu *{
+  padding: 5px;
+}
+.cart-head{
+  background-color: rgb(70, 70, 248);
+  position: fixed;
+  bottom: 1px;
+  right: 1px;
+  margin: 25px;
+  border-radius: 50px;
+  color: white;
+}
+.cart-head h1{
+  padding: 10px;
+  font-size: larger;
+  font-weight: bolder;
+}
+.hide{
+  display: none;
+}
+.show {
+  height: fit-content;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin: 15px;
+  background-color: white;
+  border-radius: 10px;
+  border: 5px solid rgb(70, 70, 248);
+  position: fixed;
+  bottom: 1px;
+  right: 1px;
 }
 aside h2 {
   font-size: 2.5rem;
-  margin: 33.2px;
+  padding: 33px;
+  width: 100%;
+  text-align: center;
+  font-family:Georgia, 'Times New Roman', Times, serif;
+  color: white;
+  background-color: rgb(70, 70, 248);
+}
+.cont{
+  padding: 15px;
 }
 form h3 {
   margin-bottom: 5px;
@@ -87,7 +122,7 @@ form input {
   margin-left: 20px;
 }
 .food {
-  width: 250px;
+  width: fit-content;
   background-color: rgb(206, 230, 252);
   margin: 10px;
   /* border: 1px solid rgb(39, 39, 39); */
@@ -118,12 +153,13 @@ form input {
   border: 2px solid;
 }
 .sub:nth-child(2) {
-  background-color: rgb(76, 76, 240);
+  background-color: rgb(70, 70, 248);
   color: white;
+  border: none;
 }
 .sub:hover {
   color: white;
-  background-color: rgb(100, 100, 255);
+  background-color: rgb(70, 70, 248);
   transition: background-color 0.5s ease-in-out;
 }
 .obut {
@@ -133,8 +169,11 @@ form input {
 table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
-  margin: 10px;
-  width: 50%;
+  margin: 10px;  
+  max-height: 150px;
+  max-width: 100%;
+  overflow-x: scroll;
+  display: block;
 }
 
 td,
@@ -142,7 +181,11 @@ th {
   border: 1px solid #8d8d8d;
   text-align: left;
   padding: 8px;
-  width: 100%;
+  width: fit-content;
+
+}
+thead{
+  position: sticky;
 }
 
 tr:nth-child(even) {
@@ -166,17 +209,6 @@ tr:nth-child(even) {
 }
 .feedback form button {
   margin: 10px;
-}
-.form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-  background-color: aliceblue;
-}
-.form h2 {
-  font-size: 2.5rem;
-  text-decoration: underline;
 }
 
 .form-group {
@@ -229,12 +261,10 @@ tr:nth-child(even) {
 }
 @media only screen and (max-width: 768px) {
   .home {
+    display: flex;
     flex-direction: column;
   }
   .collection {
-    width: 100%;
-  }
-  aside {
     width: 100%;
   }
   table {
