--- a/src/asserts/style/admin.css
+++ b/src/asserts/style/admin.css
@@ -36,9 +36,9 @@
 }
 .add label{
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
 }
 .add h4{
     width: 100%;
@@ -53,7 +53,6 @@
     color: white;
     border: none;
     padding: 10px;
-    width: 400px;
     font-weight: bold;
     font-size: 1rem;
     cursor: pointer;
